--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/project3
+spring.datasource.url=jdbc:mysql://localhost:3306/day5
 spring.datasource.username=root
-spring.datasource.password=skcet@123
+spring.datasource.password=rajikyoko
 
 spring.datasource.dbcp2.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
